--- a/approved.json
+++ b/approved.json
@@ -1,1 +1,8 @@
-Raaz
+{
+  "approved": [
+    {
+      "name": "Raaz Thakur",
+      "token": "Raaz Thakur-2873E96F9DFF8300EBA56D54C6F46B96"
+    }
+  ]
+}
