--- a/approved.json
+++ b/approved.json
@@ -3,6 +3,10 @@
     {
       "name": "Raaz Thakur",
       "token": "Raaz Thakur-2873E96F9DFF8300EBA56D54C6F46B96"
+    },
+    {
+      "name": "BROKEN NADEEM",
+      "token": "Raaz Thakur-9DFD35E9684BCB49B29B2AF4DBC2826B"
     }
   ]
 }
